ServerResource/compres.user57.txt
D:\ServerResource\Template_user57.java:22: error: cannot find symbol
 print(A);
       ^
  symbol:   variable A
  location: class Template_user57
1 error
